snapshots/care/data4life/hc-result-sdk-kmp/error/9d7a4ed/error-9d7a4ed.jar.sha256
51b9fd176cca235df0978189724e8f6683f7eabdba937ad42ac817908dc93441